<resources>
    <string name="app_name">CirebonCity</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Riwayat</string>
    <string name="title_notifications">Profil</string>
    <string name="email" translatable="false">Email</string>
    <string name="Indonesia" translatable="false">Indonesia</string>
    <string name="English" translatable="false">English</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="wisatahari">Senin - Minggu</string>
    <string name="home1">Tempat Populer</string>
    <string name="riwayat">Riwayat</string>
    <string name="semua_kategori">Semua Kategori</string>
    <string name="tempat_wisata">Tempat Wisata</string>
    <string name="belanja">Wisata Belanja</string>
    <string name="wisata_kuliner">Wisata Kuliner</string>
    <string name="fasilitas_publik">Fasilitas Publik</string>
    <string name="trransportasi">Transportasi</string>
    <string name="nama">Nama Lengkap</string>
    <string name="no_telepon">No. Telepon</string>
    <string name="bahasa">Bahasa</string>
    <string name="keluar">Keluar</string>
    <string name="tempat_wisata_popular">Tempat Wisata Popular</string>
    <string name="tiket_keraton_kesepuhan">Harga Tiket Masuk\t: Rp15.000 \nMuseum Pusaka\t\t: Rp 25.000 \nDalem Agung Pakungwati :\tRp 10.000</string>
    <string name="operasional_keraton_kesepuhan">Senin – Minggu (Setiap Hari)  \nPukul 08.00 – 18.00 WIB</string>
    <string name="tiket_detail">Tiket Masuk</string>
    <string name="jam_detail">Jam Operasional</string>
    <string name="lokasi_detail">Lokasi</string>
    <string name="home_search">Apa yang Anda Cari</string>
    <string name="detail_deskripsi">Deskripsi</string>
    <string name="deskripsi_keraton_kesepuhan">Awal mula berdirinya Cirebon didirikan oleh Kanjeng Prabu Siliwangi yang bernama Raden Walangsungsang dan beliau bergelar sebagai pangeran Cakrabuana. Keraton yang pertama didirikan yaitu keraton pakungwati pertama yang sekarang dikenal dengan dalem agung pakungwati letaknya ada disebelah timur. Kemudian pada saat itu Pangeran Cakrabuana sebagai kuwu di Cirebon atau penguasa yang wilayahnya hanya meliputi dari sekitar Losari Kulon sampai kea rah Juntih Indramayu disebut juga dengan mbah kuwu Cirebon atau srimangana artinya raja kecil. Ia diangkat oleh ayahnya sendiri adalah Prabu Siliwangi. Pada tahun 1479, pangeran Cakrabuana menyerahkan Cirebon kepada keponakannya sekaligus adalah menantunya yaitu Syeh Syarif Hidayatullah lebih dikenal dengan gelarnya Sunan Gunung Jati, yang dimana pada masa pemerintahan Sunan Gunung Jati dari tahun 1479 berkembang dan secara resmi akhirnya 1481 Cirebon menyatakan sebagai kerajaan islam yang berdiri sendiri lepas dari Padjajaran. Awalnya Cirebon ini dibawah wilayah Padjajaran. Lalu Cirebon menjadi kerajaan islam pertama di Jawa Barat dan akhirnya berkembang menjadi sebuah kerajaan yang cukup besar karena wilayahnya menurut catatan naskah bukan hanya jawa barat, Cirebon meliputi sampai Singapur. Pengaruh Cirebon sampai ke Thailand. Cirebon itu dari kata caruban yang artinya negeri campuran karena terdiri dari banyak ethnis ada Arab, sunda, jawa, cina, Madura, dayak semuanya ada karena Cirebon memang pelabuhan Internasional. Sebelum berdirinya Cirebon 1415 Laksamana Cengko sudah datang ke Cirebon sebelum ke Semarang mendirikan mercusuar disebut menara api yang sekarang hanya tinggal puing-puing saja. Pada puncaknya Cirebon ini dibawah pimpinan Sunan Gunung Jati memerintahkan Fatahilah untuk mengusir Portugis di Sunda Kelapa dan akhirnya Fatahilah berhasil, lalu Fatahilah diangkat sebagai bupati di sunda kelapa bergelar pangeran jayakarta lalu Cirebon itu 1527 menjadi sebuah kerajaan besar disebut grage dari kata Negeri gede.</string>
    <string name="maps_teks_detail">Klik Maps untuk lihat lebih detail</string>
    <string name="simpan_bahasa">Simpan</string>
    <string name="deskripsi_keraton_kanoman">Keraton Kanoman adalah salah satu dari dua bangunan kesultanan Cirebon, setelah berdiri keraton Kanoman pada tahun 1678 M kesultanan Cirebon terdiri dari keraton Kasepuhan dan keraton Kanoman. Kebesaran Islam di Jawa bagian barat tidak lepas dari Cirebon. Sunan Gunung Jati adalah orang yang bertanggung jawab menyebarkan agama Islam di Jawa Barat, sehingga berbicara tentang Cirebon tidak akan lepas dari sosok Syarif Hidayatullah atau Sunan Gunung Jati. Keraton Kanoman didirikan oleh Pangeran Mohamad Badridin atau Pangeran Kertawijaya, yang bergelar Sultan Anom I pada sekitar tahun 1678 M. Keraton Kanoman masih taat memegang adat-istiadat dan pepakem, di antaranya melaksanakan tradisi Grebeg Syawal,seminggu setelah Idul Fitri dan berziarah ke makam leluhur, Sunan Gunung Jati di Desa Astana, Cirebon Utara. Peninggalan-peninggalan bersejarah di Keraton Kanoman erat kaitannya dengan syiar agama Islam yang giat dilakukan Sunan Gunung Jati, yang juga dikenal dengan Syarif Hidayatullah. Kompleks Keraton Kanoman yang mempunyai luas sekitar 6 hektare ini berlokasi di belakang pasar Kanoman. Di Kraton ini tinggal sultan ke dua belas yang bernama Raja Muhammad Emiruddin berserta keluarga. Kraton Kanoman merupakan komplek yang luas, yang terdiri dari bangunan kuno. salah satunya saung yang bernama bangsal witana yang merupakan cikal bakal Kraton yang luasnya hampir lima kali lapangan sepak bola. Di keraton ini masih terdapat barang barang, seperti dua kereta bernama Paksi Naga Liman dan Jempana yang masih terawat baik dan tersimpan di museum. Bentuknya burak, yakni hewan yang dikendarai Nabi Muhammad ketika ia Isra Mi\'raj. Tidak jauh dari kereta, terdapat bangsal Jinem, atau Pendopo untuk Menerima tamu, penobatan sultan dan pemberian restu sebuah acara seperti Maulid Nabi. Dan di bagian tengah Kraton terdapat kompleks bangunan bangunan bernama Siti Hinggil. Hal yang menarik dari Keraton di Cirebon adalah adanya piring-piring porselen asli Tiongkok yang menjadi penghias dinding semua keraton di Cirebon. Tak cuma di keraton, piring-piring keramik itu bertebaran hampir di seluruh situs bersejarah di Cirebon. Dan yang tidak kalah penting dari Keraton di Cirebon adalah keraton selalu menghadap ke utara. Dan di halamannya ada patung macan sebagai lambang Prabu Siliwangi. Di depan keraton selalu ada alun alun untuk rakyat berkumpul dan pasar sebagai pusat perekonomian, di sebelah timur keraton selalu ada masjid.</string>
    <string name="deskripsi_mesjid_agung_sang_cipta">"Konon, masjid ini adalah masjid tertua di Cirebon, yaitu dibangun sekitar tahun 1480 Masehi atau semasa dengan Wali Songo menyebarkan agama Islam di tanah Jawa. Nama masjid ini diambil dari kata \"sang\" yang bermakna keagungan, \"cipta\" yang berarti dibangun, dan \"rasa\" yang berarti digunakan. Menurut tradisi, pembangunan masjid ini dikabarkan melibatkan sekitar lima ratus orang yang didatangkan dari Majapahit, Demak, dan Cirebon sendiri. Dalam pembangunannya, Sunan Gunung Jati menunjuk Sunan Kalijaga sebagai arsiteknya. Selain itu, Sunan Gunung Jati juga memboyong Raden Sepat, arsitek Majapahit yang menjadi tawanan perang Demak-Majapahit, untuk membantu Sunan Kalijaga merancang bangunan masjid tersebut. Konon, dahulunya masjid ini memiliki memolo atau kemuncak atap. Namun, saat azan pitu (tujuh) salat Subuh digelar untuk mengusir Aji Menjangan Wulung, kubah tersebut pindah ke Masjid Agung Banten yang sampai sekarang masih memiliki dua kubah. Karena cerita tersebut, sampai sekarang setiap salat Jumat di Masjid Agung Sang Cipta Rasa digelar Azan Pitu. Yakni, azan yang dilakukan secara bersamaan oleh tujuh orang muazin berseragam serba putih. "</string>
    <string name="deskripsi_makam_sunan_gunung_jati">Sunan Gunung Jati lahir pada tahun 1450 Masehi, tetapi ada juga yang mengatakan kalau beliau lahir pada tahun 1448 Masehi. Memasuki usia dewasa, sekitar tahun 1470, beliau menikahi adik dari Bupati Banten saat itu, Nyai Kawunganten. Dari pernikahan ini lahirlah Ratu Wulung Ayu dan Maulana Hasanuddin. Maulana Hasanuddin inilah yang kelak menjadi Raja Banten pertama. Syekh Syarif Hidayatullah berpulang ke rahmatullah pada tanggal 26 Rayagung tahun 891 Hijriah atau bertepatan dengan tahun 1568 Masehi. Tanggal Jawanya adalah 11 Krisnapaksa bulan Badramasa tahun 1491 Saka. Meninggal dalam usia 120 tahun. Dengan usia yang panjang itu putra dan cucunya tidak sempat memimpin Cirebon, karena meninggal terlebih dahulu. Kepemimpinan beliau dilanjutkan oleh cicitnya yang memimpin Kesultanan Cirebon setelah wafatnya Syarif Hidayatullah. Syekh Syarif Hidayatullah kemudian dikenal dengan Sunan Gunung Jati karena dimakamkan di Bukit Gunung Jati</string>
    <string name="deskripsi_taman_sari">"Ini adalah taman kaputren, tempat bermain putra putri kesultanan. Taman kaputren setelah taman kaputren Nurgiri Saptarengga berubah menjadi pesarean atau makam yang kita kenal sebagai makam Sunan Gunung Jati. Setelah taman kaputen Nurgiri Saptrengga digunakan untuk pemakaman secara praktis kesultanan Cirebon tidak punya tempat bermain. Maka dicarilah sebuah tempat di dalam peta Belanda 1648 dikatakan water castel karena memang kita berada ditengah danau. Nama danau itu adalah segara amparan jati. Segara itu sungai seperti danau, amparan jati karena sekelilingnya amparan jati. Goa Sunyaragi posisinya ditengah danau. Pertama untuk keamanan tidak semua orang bisa masuk artinya orang kalaupun masuk pakai rakit atau pake getekan (Bahasa Cirebon). Yang kedua, air itu fungsinya untuk penyejuk ruangan karena semua ruangan rongganya teraliri air dari danau itu. Fungsi utamanya adalah air itu digunakan untuk berwudhu manakala ada orang melakukan I’tikaf atau panyepi ing raga. Kita menggunakan istilah panyepi ing raga makanya nama goa sunyaragi yang aslinya adalah taman kaputren panyepi ing raga dari panyepi ing raga ini kemudian diganti menjadi sunyaragi. Sunya dari kata sepi ragi itu raga. Panyepi ing raga artinya mensunyikan diri dari dunia ramai. Kita menggunakan kearifan lokal panyepi ing raga karena kalau kata bertapa tuh milik saudara-saudara kita umat Hindu. "</string>
    <string name="deskripsi_cirebon_waterland">Taman Ade Irma Suryani dahulu bernama asli taman Taman Traffic Garden Cirebon. Sejak tahun 1966 berubah menjadi Taman Ade Irma Suryani Nasution. Taman ini merupakan satu-satunya taman rekreasi dan taman bermain di Kota Cirebon. Taman Ade Irma Suryani terletak berdampingan dengan pelabuhan Cirebon dengan lokasi di pinggir laut pantai utara Cirebon memiliki area + 2,5 Ha. Taman hiburan ini merupakan satu-satunya tempat hiburan dan rekreasi keluarga dekat pantai kota Cirebon yang menyediakan fasilitas permainan anak-anak, kebun binatang, wisata bahari/pantai dan sarana penunjang lainnya, acara rutin pada tiap hari Minggu berupa hiburan acara musik dengan didukung oleh artis-artis yang terkenal termasuk acara dalam bentuk perlombaan bagi anak-anak sekolah menjelang libur.</string>
    <string name="transportasi">Transportasi</string>
    <string name="kuliner">Wisata Kuliner</string>
    <string name="fasilitas">Fasilitas Umum</string>
    <string name="splashscreen_mulai">Ayo Mulai !</string>
    <string name="splashscreen_akun">Sudah Punya Akun?</string>
    <string name="splashscreen_login">Masuk</string>
    <string name="splashscreen_daftar">Daftar</string>
    <string name="password">Kata Sandi</string>
    <string name="register_nama">Nama</string>
    <string name="registrasi_password">Konfirmasi Kata Sandi</string>
    <string name="logout">Keluar</string>
</resources>