<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.dashboard.DashboardFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/title_dashboard"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"/>

   <HorizontalScrollView
       android:layout_width="match_parent"
       android:layout_height="50dp">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:gravity="center_vertical">
           <Button
               android:id="@+id/btn_historysemua"
               android:layout_width="80dp"
               android:layout_height="45dp"
               android:background="@drawable/roundedbtn6"
               android:text="@string/semua_kategori"
               android:textColor="@color/colorPrimary"
               android:textSize="11dp"
               android:layout_marginLeft="15dp"
               android:padding="5dp"/>
           <Button
               android:id="@+id/btn_historywisata"
               android:layout_width="80dp"
               android:layout_height="45dp"
               android:layout_marginLeft="15dp"
               android:background="@drawable/roundedbtn6"
               android:padding="5dp"
               android:text="@string/tempat_wisata"
               android:textColor="@android:color/black"
               android:textSize="12dp"/>
           <Button
               android:id="@+id/btn_historybelanja"
               android:layout_width="80dp"
               android:layout_height="45dp"
               android:layout_marginLeft="15dp"
               android:background="@drawable/roundedbtn6"
               android:padding="5dp"
               android:text="@string/belanja"
               android:textColor="@android:color/black"
               android:textSize="12dp"/>
           <Button
               android:id="@+id/btn_historykuliner"
               android:layout_width="80dp"
               android:layout_height="45dp"
               android:layout_marginLeft="15dp"
               android:background="@drawable/roundedbtn6"
               android:padding="5dp"
               android:text="@string/kuliner"
               android:textColor="@android:color/black"
               android:textSize="12dp"/>
           <Button
               android:id="@+id/btn_historyfasilitas"
               android:layout_width="80dp"
               android:layout_height="45dp"
               android:layout_marginLeft="15dp"
               android:background="@drawable/roundedbtn6"
               android:padding="5dp"
               android:text="@string/fasilitas"
               android:textColor="@android:color/black"
               android:textSize="12dp"/>
           <Button
               android:id="@+id/btn_historytransport"
               android:layout_width="80dp"
               android:layout_height="45dp"
               android:layout_marginLeft="15dp"
               android:background="@drawable/roundedbtn6"
               android:text="@string/transportasi"
               android:textColor="@android:color/black"
               android:padding="5dp"
               android:textSize="12dp"
               android:layout_marginRight="15dp"/>
       </LinearLayout>
   </HorizontalScrollView>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="#6A6969"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="0dp" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
</LinearLayout>