<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashscreenLogin"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/white">
    <ImageView
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:src="@drawable/cirebon_bg"
    android:scaleType="fitXY" />
    <Button
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/splashscreen_mulai"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@drawable/roundedtn2"
        android:onClick="mulai"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splashscreen_akun"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splashscreen_login"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="10dp"
            android:onClick="login"/>
    </LinearLayout>

</LinearLayout>