<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="168dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_notifications"
                android:textColor="@android:color/black"
                android:textSize="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textSize="24dp" />

                <TextView
                    android:id="@+id/tv_Nameprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Lucy Anastasia"
                    android:background="@drawable/strokeonly2"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:textIsSelectable="true"
                    android:textSize="24sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Email"
                    android:textSize="24dp" />

                <TextView
                    android:id="@+id/tv_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/strokeonly2"
                    android:padding="10dp"
                    android:text="beautynoni@yahoo.com"
                    android:textColor="@android:color/black"
                    android:textIsSelectable="true"
                    android:textSize="24sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/no_telepon"
                    android:textSize="24dp" />

                <TextView
                    android:id="@+id/tv_Phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/strokeonly2"
                    android:padding="10dp"
                    android:layout_marginTop="15dp"
                    android:text="0812345678"
                    android:textColor="@android:color/black"
                    android:textIsSelectable="true"
                    android:textSize="24sp" />


            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="#6A6969"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:layout_editor_absoluteX="0dp" />

            <LinearLayout
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bahasa"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <RadioGroup
                    android:id="@+id/radioSex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/strokeonly2"
                        android:checked="true"
                        android:textSize="24sp"
                        android:text="@string/Indonesia" />

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/strokeonly2"
                        android:textSize="24sp"
                        android:layout_marginTop="10dp"
                        android:text="@string/English" />

                </RadioGroup>

                <Button
                    android:layout_marginTop="20dp"
                    android:background="@drawable/roundedtn2"
                    android:id="@+id/btn_simpan"
                    android:layout_width="320dp"
                    android:textColor="@android:color/white"
                    android:layout_height="wrap_content"
                    android:text="@string/simpan_bahasa"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioSex" />
                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardCornerRadius="40dp"
                    android:elevation="20dp"
                    android:onClick="logout"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#E64040"
                        android:textSize="24sp"
                        android:text="@string/logout"
                        android:layout_gravity="center"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>